[package]
name = "webview"
version = "0.1.0"
edition = "2021"

[[example]]
name = "simple"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
cc = { version = "1.0.79", features = ["parallel"] }

[dev-dependencies]
anyhow = "1"
minifb = "0.24"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
